@@ -1,25 +1,36 @@
 package uk.gov.hmcts.ethos.replacement.docmosis.service.refdatafixes;
 
-import java.io.IOException;
-import java.time.LocalDate;
-import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
-import org.elasticsearch.common.Strings;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.ecm.common.client.CcdClient;
 import uk.gov.hmcts.ecm.common.model.ccd.CCDRequest;
 import uk.gov.hmcts.ecm.common.model.ccd.CaseData;
 import uk.gov.hmcts.ecm.common.model.ccd.SubmitEvent;
+import uk.gov.hmcts.ecm.common.model.ccd.items.DateListedTypeItem;
 import uk.gov.hmcts.ecm.common.model.ccd.items.HearingTypeItem;
 import uk.gov.hmcts.ecm.common.model.ccd.types.HearingType;
 import uk.gov.hmcts.ecm.common.model.helper.CaseEventDetail;
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.*;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.refdatafixes.refData.AdminData;
 import uk.gov.hmcts.ethos.replacement.docmosis.service.refdatafixes.refData.AdminDetails;
+
+import java.io.IOException;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
+import java.util.List;
+
+import static com.google.common.base.Strings.isNullOrEmpty;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.ACCEPTED_STATE;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.LONDON_CENTRAL_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.LONDON_EAST_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.LONDON_SOUTH_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.MIDLANDS_EAST_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.MIDLANDS_WEST_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.OLD_DATE_TIME_PATTERN;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.OLD_DATE_TIME_PATTERN2;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.RANGE_HEARING_DATE_TYPE;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -30,7 +41,8 @@ public class ReferenceDataFixesService {
     public static final String GENERATE_CORRESPONDENCE = "generateCorrespondence";
     private final CcdClient ccdClient;
 
-    public AdminData updateJudgesItcoReferences(AdminDetails adminDetails, String authToken, RefDataFixesCcdDataSource dataSource) {
+    public AdminData updateJudgesItcoReferences(AdminDetails adminDetails, String authToken,
+                                                RefDataFixesCcdDataSource dataSource) {
 
         AdminData adminData = adminDetails.getCaseData();
         String existingJudgeCode = adminData.getExistingJudgeCode();
@@ -48,14 +60,14 @@ public class ReferenceDataFixesService {
                     CCDRequest returnedRequest = ccdClient.startEventForCase(authToken, caseTypeId,
                             adminDetails.getJurisdiction(), String.valueOf(submitEvent.getCaseId()));
                     CaseData caseData = returnedRequest.getCaseDetails().getCaseData();
-                    if (setJudgeName(caseData, existingJudgeCode, requiredJudgeCode)) {
+                    if (setJudgeName(caseData, existingJudgeCode, requiredJudgeCode, dateFrom, dateTo)) {
                         ccdClient.submitEventForCase(authToken, caseData, caseTypeId,
-                                adminDetails.getJurisdiction(), returnedRequest, String.valueOf(submitEvent.getCaseId()));
+                                adminDetails.getJurisdiction(), returnedRequest,
+                                String.valueOf(submitEvent.getCaseId()));
                     }
                 }
-                log.info(String.format(
-                        "Existing Judge's code in all cases from %s to %s is " +
-                                "updated to required judge's code", dateFrom, dateTo));
+                log.info(String.format("Existing Judge's code in all cases from %s to %s is "
+                        + "updated to required judge's code", dateFrom, dateTo));
             }
             return adminData;
         } catch (Exception ex) {
@@ -65,20 +77,14 @@ public class ReferenceDataFixesService {
     }
 
     private String getTribunalOffice(String tribunalOffice) {
-        switch (tribunalOffice) {
-            case "London Central":
-                return LONDON_CENTRAL_CASE_TYPE_ID;
-            case "London East":
-                return LONDON_EAST_CASE_TYPE_ID;
-            case "London South":
-                return LONDON_SOUTH_CASE_TYPE_ID;
-            case "Midlands East":
-                return MIDLANDS_EAST_CASE_TYPE_ID;
-            case "Midlands West":
-                return MIDLANDS_WEST_CASE_TYPE_ID;
-            default:
-                return tribunalOffice;
-        }
+        return switch (tribunalOffice) {
+            case "London Central" -> LONDON_CENTRAL_CASE_TYPE_ID;
+            case "London East" -> LONDON_EAST_CASE_TYPE_ID;
+            case "London South" -> LONDON_SOUTH_CASE_TYPE_ID;
+            case "Midlands East" -> MIDLANDS_EAST_CASE_TYPE_ID;
+            case "Midlands West" -> MIDLANDS_WEST_CASE_TYPE_ID;
+            default -> tribunalOffice;
+        };
     }
 
     private List<String> getDateRangeForSearch(AdminDetails adminDetails, DateTimeFormatter pattern) {
@@ -101,17 +107,39 @@ public class ReferenceDataFixesService {
         return List.of(dateFrom, dateTo);
     }
 
-    private boolean setJudgeName(CaseData caseData, String existingJudgeCode, String requiredJudgeCode) {
-       boolean judgeChanged = false;
+    private boolean setJudgeName(CaseData caseData, String existingJudgeCode, String requiredJudgeCode,
+                                 String dateFrom, String dateTo) {
+        boolean judgeChanged = false;
         for (HearingTypeItem hearingTypeItem : caseData.getHearingCollection()) {
             HearingType hearingType = hearingTypeItem.getValue();
-            if (!Strings.isNullOrEmpty(hearingType.getJudge()) && hearingType.getJudge().equals(existingJudgeCode)) {
+            if (checkJudge(hearingType.getJudge(), existingJudgeCode)
+                && (hearingInDateRange(hearingType, dateFrom, dateTo))) {
                 hearingType.setJudge(requiredJudgeCode);
-                log.info(String.format("Judge's code in Case with ethosReference %s is updated", caseData.getEthosCaseReference()));
+                log.info("Judge changed from " + existingJudgeCode + " to " + requiredJudgeCode);
                 judgeChanged = true;
             }
         }
         return judgeChanged;
+    }
+
+    private boolean checkJudge(String judge, String existingJudgeCode) {
+        return !isNullOrEmpty(judge) && judge.equals(existingJudgeCode);
+    }
+
+    private boolean hearingInDateRange(HearingType hearingType, String dateFrom, String dateTo) {
+        LocalDate from = LocalDateTime.parse(dateFrom, OLD_DATE_TIME_PATTERN).toLocalDate();
+        LocalDate to = LocalDateTime.parse(dateTo, OLD_DATE_TIME_PATTERN).toLocalDate();
+        return hearingType.getHearingDateCollection().stream()
+                .anyMatch(hearingDateItem -> isHearingWithinFilterRange(hearingDateItem, from, to)
+                );
+    }
+
+    private static boolean isHearingWithinFilterRange(DateListedTypeItem hearingDateItem, LocalDate from,
+                                                      LocalDate to) {
+        LocalDate listedDate = LocalDateTime.parse(hearingDateItem.getValue().getListedDate(),
+                OLD_DATE_TIME_PATTERN).toLocalDate();
+        return (listedDate.isAfter(from) || listedDate.equals(from))
+               && (listedDate.isBefore(to) || listedDate.equals(to));
     }
 
     /**
@@ -141,14 +169,15 @@ public class ReferenceDataFixesService {
         String dateFrom = dates.get(0);
         String dateTo = dates.get(1);
         try {
-            List<SubmitEvent> submitEvents = dataSource.getDataForInsertClaimDate(caseTypeId, dateFrom, dateTo, ccdClient);
+            List<SubmitEvent> submitEvents =
+                    dataSource.getDataForInsertClaimDate(caseTypeId, dateFrom, dateTo, ccdClient);
             if (CollectionUtils.isNotEmpty(submitEvents)) {
                 log.info("Cases Searched for inserting claim served date: " + submitEvents.size());
                 for (SubmitEvent submitEvent : submitEvents) {
                     insertClaimServedDateInSingleCase(submitEvent, authToken, caseTypeId, adminDetails, errors);
                 }
-                log.info(String.format("Inserting Claim served date is completed in cases with receipt " +
-                        "date from %s to %s", dateFrom, dateTo));
+                log.info(String.format("Inserting Claim served date is completed in cases with receipt "
+                                       + "date from %s to %s", dateFrom, dateTo));
             }
             return adminData;
 
@@ -172,7 +201,7 @@ public class ReferenceDataFixesService {
                         .stream().filter(i -> i.getId().equals(
                                 GENERATE_CORRESPONDENCE)
                                 && i.getStateId() != null
-                                && i.getStateId().equals(ACCEPTED_STATE)).collect(Collectors.toList());
+                                && i.getStateId().equals(ACCEPTED_STATE)).toList();
                 if (CollectionUtils.isNotEmpty(generateCorrespondenceEvents)) {
                     setClaimServedDate(generateCorrespondenceEvents, submitEvent, authToken, caseTypeId, adminDetails);
                 } else {
@@ -196,7 +225,7 @@ public class ReferenceDataFixesService {
                 adminDetails.getJurisdiction(), String.valueOf(submitEvent.getCaseId()));
         claimServedDate = generateCorrespondenceEvents.stream()
                 .sorted(CaseEventDetail::comparedTo)
-                .collect(Collectors.toList())
+                .toList()
                 .get(0).getCreatedDate().toLocalDate();
         CaseData returnedRequestCaseData = returnedRequest.getCaseDetails().getCaseData();
         if (returnedRequestCaseData.getClaimServedDate() == null) {
